--- a/PlanIt/src/assets/AppHeader.css
+++ b/PlanIt/src/assets/AppHeader.css
@@ -14,6 +14,31 @@
     align-items: center;
 }
 
+.icon-container {
+    margin-right: 10px; 
+    cursor: pointer; 
+}
+
+.hover-icon {
+    transition: transform 0.3s ease; 
+}
+
+.hover-icon:hover {
+    animation: moveAnimation 0.5s ease forwards;
+}
+
+@keyframes moveAnimation {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px); 
+    }
+    100% {
+        transform: translateY(0); 
+    }
+}
+
 .logo {
     color: #172b4d;
     font-size: 18px;
@@ -74,3 +99,4 @@
     border-radius: 50%;
     font-size: 16px;
 }
+
