--- a/PlanIt/src/assets/setup/_variables.scss
+++ b/PlanIt/src/assets/setup/_variables.scss
@@ -1,6 +1,7 @@
 $primary-color: #0c66e4;
 $secondary-color: #ffffff;
 $text-color: #44546f;
-$hover-background-color: rgb(155, 154, 154);
+$hover-background-color: #091E4224;
 $user-logo-bg-color: #0052CC;
+$create-btn-hover-color: #0055CC;
 $box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
