Add main home page

--- a/PlanIt/src/assets/cmps/_App-header.scss
+++ b/PlanIt/src/assets/cmps/_App-header.scss
@@ -48,7 +48,7 @@
             gap: 2px;
 
             &:hover {
-                background-color: $hover-background-color;
+                background-color: $hover-bg-color;
             }
         }
 
@@ -60,7 +60,7 @@
             font-weight: bold;
 
             &:hover {
-                background-color: $create-btn-hover-color;
+                background-color: $btn-hover-color;
             }
         }
     }
