--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -1,3 +1,8 @@
+// SETUP
+@import './setup/typography';
 @import './setup/variables';
+@import './setup/functions';
 
-@import './cmps/AppHeader.scss';
+// COMPONENTS
+@import './cmps/App-header';
+@import './cmps/Home-page';
