--- a/PlanIt/src/assets/setup/_variables.scss
+++ b/PlanIt/src/assets/setup/_variables.scss
@@ -1,7 +1,13 @@
+// ~~~~~~~~ COLORS ~~~~~~~~
 $primary-color: #0c66e4;
 $secondary-color: #ffffff;
+$main-homepage-color: rgb(82, 67, 170);
+$main-secondary-homepage-color: rgb(237, 80, 180);
 $text-color: #44546f;
-$hover-background-color: #091E4224;
 $user-logo-bg-color: #0052CC;
-$create-btn-hover-color: #0055CC;
+
+$hover-bg-color: #091E4224;
+$btn-color: rgb(0, 101, 255);
+$btn-hover-color: rgb(7, 71, 166);
+
 $box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
