--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -3,4 +3,5 @@
 @import './setup/variables';
 @import './setup/functions';
 
-@import './cmps/AppHeader.scss';
+@import './cmps/App-header.scss';
+@import './cmps/Home-page.scss';
