--- a/PlanIt/src/assets/setup/_variables.scss
+++ b/PlanIt/src/assets/setup/_variables.scss
@@ -11,3 +11,7 @@ $btn-color: rgb(0, 101, 255);
 $btn-hover-color: rgb(7, 71, 166);
 
 $box-shadow: 0 1px 0 rgba(9, 30, 66, 0.25);
+
+
+// LAYOUT
+$layoutPadding: 50px;
