--- a/PlanIt/src/assets/cmps/_App-header.scss
+++ b/PlanIt/src/assets/cmps/_App-header.scss
@@ -25,6 +25,7 @@
             font-weight: bold;
             color: #333333;
             margin-right: 24px;
+            text-decoration: none;
         }
 
         .create-button {
@@ -129,6 +130,7 @@
             align-items: center;
             border-radius: 50%;
             font-size: 16px;
+
         }
     }
 }
