--- a/PlanIt/src/assets/cmps/_Home-page.scss
+++ b/PlanIt/src/assets/cmps/_Home-page.scss
@@ -81,6 +81,7 @@
     .productivity-container {
         grid-column: 1/-1;
         display: grid;
+        justify-items: center;
         grid-template-columns: $layoutPadding*2 1fr $layoutPadding*2;
         grid-template-rows: 1fr 3fr;
         background: linear-gradient(0deg, rgb(230, 252, 255),
