--- a/PlanIt/src/assets/cmps/_App-header.scss
+++ b/PlanIt/src/assets/cmps/_App-header.scss
@@ -127,6 +127,64 @@
     align-items: center;
     gap: 16px;
 
+    .icon-container {
+      position: relative;
+      display: flex;
+      align-items: center;
+    }
+
+    .notification-icon {
+      margin-top: 3px;
+      position: relative;
+      cursor: pointer;
+    }
+
+    .notification-icon img {
+      width: 24px;
+      height: 24px;
+    }
+
+    .notification-badge {
+      position: absolute;
+      top: -5px;
+      right: -5px;
+      background-color: rgb(206, 66, 66);
+      color: white;
+      border-radius: 50%;
+      padding: 2px 6px;
+      font-size: 12px;
+      font-weight: bold;
+    }
+
+    .notifications-dropdown {
+      position: absolute;
+      top: 35px;
+      right: 0;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      padding: 10px;
+      width: 300px;
+      z-index: 1000;
+      max-height: 400px;
+      overflow-y: auto;
+    }
+
+    .notification-item {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+      font-size: 14px;
+      color: #333;
+    }
+
+    .notification-item:last-child {
+      border-bottom: none;
+    }
+
+    .notification-item:hover {
+      background-color: #f5f5f5;
+    }
     .search-bar {
       padding: 6px 12px;
       border: 1px solid #e0e0e0;
