--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -5,4 +5,5 @@
 
 @import './cmps/App-header.scss';
 @import './cmps/Home-page.scss';
-@import './cmps/BoardList.scss'
+@import './cmps/BoardList.scss';
+@import './cmps/AddGroup.scss';
