--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -5,5 +5,6 @@
 
 @import './cmps/App-header.scss';
 @import './cmps/Home-page.scss';
+@import './cmps/BoardIndex';
 @import './cmps/BoardList.scss';
 @import './cmps/AddGroup.scss';
