--- a/PlanIt/src/assets/cmps/AddGroup.scss
+++ b/PlanIt/src/assets/cmps/AddGroup.scss
@@ -1,35 +1,55 @@
-.add-group {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-
-    input {
-        padding: 8px;
-        font-size: 14px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-    }
-
-    .add-group-btn {
-        background-color: #0c66e4;
-        color: #ffffff;
-        font-size: 14px;
-        line-height: 20px;
-        text-align: center;
-        border-radius: 3px;
-        border: none;
-        padding: 8px;
-    }
-
-    .cancel-add-group {
-        background-color: #e0e0e0;
-        color: #333;
-        font-size: 14px;
-        line-height: 20px;
-        text-align: center;
-        border-radius: 3px;
-        border: none;
-        padding: 8px;
-    }
+.group-card {
+  background-color: #f4f5f7;
+  border-radius: 6px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100px;
+  width: 250px;
 }
- 
+
+.add-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin-top: 8px;
+  padding: 8px;
+  border-radius: 6px;
+  background-color: #f4f5f7;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  width: 250px;
+  cursor: pointer;
+}
+
+.add-group-btn {
+  background-color: rgba(236, 233, 233, 0.24); 
+  color: #172b4d;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 3px;
+  border: none;
+  padding: 8px;
+  cursor: pointer;
+}
+
+
+
+.cancel-add-group {
+  background-color: #e0e0e0;
+  color: #333;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 3px;
+  border: none;
+  padding: 8px;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
