--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -6,8 +6,10 @@
 @import './setup/variables';
 @import './setup/functions';
 
+//CMPS
 @import './cmps/App-header.scss';
 @import './cmps/Home-page.scss';
 @import './cmps/BoardIndex';
 @import './cmps/BoardList.scss';
 @import './cmps/AddGroup.scss';
+@import './cmps/AddTask.scss';
