--- a/PlanIt/src/assets/cmps/_Home-page.scss
+++ b/PlanIt/src/assets/cmps/_Home-page.scss
@@ -112,7 +112,7 @@
                     padding: 0rem 1rem 1rem 1.5rem;
                     text-align: start;
 
-                    &.active {
+                    &.card-active {
                         background: white;
 
                         &:after {
