Create TaskModal and style it

--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -13,3 +13,4 @@
 @import './cmps/BoardList.scss';
 @import './cmps/AddGroup.scss';
 @import './cmps/AddTask.scss';
+@import './cmps/TaskModal.scss';
