Add groupMenu & fix scss

--- a/PlanIt/src/assets/cmps/BoardList.scss
+++ b/PlanIt/src/assets/cmps/BoardList.scss
@@ -5,9 +5,7 @@
     overflow-x: auto;
     align-items: flex-start;
     padding: 16px;
-
     margin-top: 100px;
-
 }
 
 .board-card {
@@ -38,107 +36,89 @@
         align-items: flex-start;
     
         .group-card {
+            border-radius: 6px;
+            padding: 16px;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
             display: flex;
             flex-direction: column;
-            padding: 12px;
-            width: 272px;
-            min-height: 398px;
-            
-            font-size: 14px;
-            text-align: left;
-            line-height: 20px;
-            letter-spacing: normal;
-
+            cursor: pointer;
             background-color: #f4f5f7;
-
             box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px 0px, rgba(9, 30, 66, 0.31) 0px 0px 1px 0px;
             border-radius: 12px;
-        }
-    
-        .add-group-btn {
-            background-color: #f4f5f7;
-            border-radius: 6px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-            padding: 12px;
-            width: 250px;
-            height: 100px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            margin-top: 0;
-    
-            &:hover {
-                background-color: #d4d4d4;
+            
+            .group-header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 8px;
             }
-    
-            .add-list-text {
+        
+            .group-title {
+                margin: 0;
                 font-size: 1.2rem;
                 color: #333333;
                 font-weight: bold;
             }
-        }
-
-        .group-title {
-            margin: 0;
-            font-size: 1.2rem;
-            color: #333333;
-            font-weight: bold;
-        }
-
-        .tasks {
-            margin-top: 8px;
-
-            .task {
-                background-color: #ffffff;
-                border-radius: 4px;
-                box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-                padding: 8px;
-                margin-bottom: 8px;
-                display: flex;
-                flex-direction: column;
-                gap: 8px;
-
-                .task-title {
-                    margin: 0;
-                    font-size: 1rem;
-                    color: #333333;
-                }
-
-                .labels {
-                    margin-top: 4px;
+        
+            .group-menu {
+                margin-left: auto;
+            }
+            
+            .tasks {
+                margin-top: 8px;
+        
+                .task {
+                    background-color: #ffffff;
+                    border-radius: 4px;
+                    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+                    padding: 8px;
+                    margin-bottom: 8px;
                     display: flex;
-                    flex-wrap: wrap;
-                    gap: 6px;
-
-                    .label {
-                        padding: 4px 8px;
-                        font-size: 0.8rem;
-                        color: #ffffff;
-                        border-radius: 4px;
-                        text-align: center;
-                    }
-                }
-
-                .members {
-                    display: flex;
-                    flex-wrap: wrap;
+                    flex-direction: column;
                     gap: 8px;
-                    margin-top: auto;
-                    justify-content: flex-end;
-                    align-items: center;
-
-                    .member {
-                        background-color: #f3f4f6;
-                        padding: 4px 8px;
-                        border-radius: 100%;
-                        font-size: 0.8rem;
-                        text-align: center;
-                        line-height: 24px;
-                        color: #172b4d;
+        
+                    .task-title {
+                        margin: 0;
+                        font-size: 1rem;
+                        color: #333333;
+                    }
+        
+                    .labels {
+                        margin-top: 4px;
+                        display: flex;
+                        flex-wrap: wrap;
+                        gap: 10px;
+        
+                        .label {
+                            padding: 4px 8px;
+                            font-size: 0.8rem;
+                            color: #ffffff;
+                            border-radius: 4px;
+                            text-align: center;
+                        }
+                    }
+        
+                    .members {
+                        display: flex;
+                        flex-wrap: wrap;
+                        gap: 8px;
+                        margin-top: auto;
+                        justify-content: flex-end;
+                        align-items: center;
+        
+                        .member {
+                            background-color: #f3f4f6;
+                            padding: 4px 8px;
+                            border-radius: 100%;
+                            font-size: 0.8rem;
+                            text-align: center;
+                            line-height: 24px;
+                            color: #172b4d;
+                        }
                     }
                 }
             }
         }
-    }
+        
+}
 }
