--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -13,8 +13,10 @@
 @import './cmps/BoardList.scss';
 @import './cmps/AddGroup.scss';
 @import './cmps/AddTask.scss';
-<<<<<<< HEAD
+@import './cmps/GroupMenu.scss';
+
+// <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
-=======
+// =======
 @import './cmps/BoardHeader.scss'
->>>>>>> BoardHeader
+// >>>>>>> BoardHeader
