--- a/PlanIt/src/assets/setup/_typography.scss
+++ b/PlanIt/src/assets/setup/_typography.scss
@@ -2,3 +2,8 @@
     font-family: charlie;
     src: url(../fonts/Charlie.otf);
 }
+
+@font-face {
+    font-family: trellicons;
+    src: url(../fonts/trellicons.ttf);
+}
