--- a/PlanIt/src/assets/main.scss
+++ b/PlanIt/src/assets/main.scss
@@ -14,6 +14,7 @@
 @import './cmps/AddGroup.scss';
 @import './cmps/AddTask.scss';
 @import './cmps/GroupMenu.scss';
+@import './cmps/MenuHeader.scss';
 
 // <<<<<<< HEAD
 @import './cmps/TaskModal.scss';
